--- a/.github/workflows/tests-14-sprint.yml
+++ b/.github/workflows/tests-14-sprint.yml
@@ -1,4 +1,4 @@
-name: [![Tests for sprint 14](https://github.com/${имя_пользователя}/${имя репозитория}/actions/workflows/tests-14-sprint.yml/badge.svg)](https://github.com/${имя_пользователя}/${имя репозитория}/actions/workflows/tests-14-sprint.yml)
+name: Tests 14 sprint
 
 on:
   push:
