--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "body-parser": "^1.20.0",
     "celebrate": "^15.0.1",
     "express": "^4.18.1",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^2.0.19"
+    "jest": "^29.1.2",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   }
 }
