--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "validator": "^13.7.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -35,7 +36,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.1.2",
-    "nodemon": "^2.0.19",
+    "nodemon": "^2.0.20",
     "supertest": "^6.2.4"
   }
 }
